--- a/src/package.json
+++ b/src/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@material-ui/core": "latest",
     "@mui/material": "5.8.1",
+    "@mui/icons-material": "latest",
     "react": "latest",
     "react-dom": "latest"
   }
